--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,13 +7,30 @@
         android:layout_height="match_parent"
         tools:context=".MainActivity">
 
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Hello World!"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
-
+    <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" android:id="@+id/mainHLayout">
+        <LinearLayout
+                android:orientation="vertical"
+                android:layout_height="match_parent"
+                android:id="@+id/mainVLayout"
+                android:layout_weight="1" android:layout_width="wrap_content">
+            <Button
+                    android:text="American"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/startAmericanBtn"
+                    android:onClick="onMenuBtnClick"/>
+        </LinearLayout>
+        <LinearLayout
+                android:orientation="vertical"
+                android:layout_height="match_parent" android:id="@+id/mainVLayout2"
+                android:layout_weight="1" android:layout_width="wrap_content">
+            <Button
+                    android:text="Asian"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/startAsianBtn"
+                    android:onClick="stars"/>
+        </LinearLayout>
+    </LinearLayout>
 </android.support.constraint.ConstraintLayout>
