Fixed NPE due to bundle issue; Added MapsActivity to complete our blessed triple threat activities

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,7 @@
                     android:text="Asian"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" android:id="@+id/startAsianBtn"
-                    android:onClick="stars"/>
+                    android:onClick="onMenuBtnClick"/>
         </LinearLayout>
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
