--- a/app/src/main/res/layout/activity_restaurants_list.xml
+++ b/app/src/main/res/layout/activity_restaurants_list.xml
@@ -6,16 +6,24 @@
                                              android:layout_height="match_parent"
                                              tools:context=".RestaurantsListActivity">
 
+	<TextView
+			android:text="@string/restaurant_list_instructions_txt"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:id="@+id/restaurant_list_instructions_tv" app:layout_constraintTop_toTopOf="parent"
+			android:layout_marginTop="8dp"
+			app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
+			app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"/>
 	<Spinner
 			android:id="@+id/cuisine_type_spinner"
 			android:layout_width="153dp"
 			android:layout_height="47dp"
-			android:layout_marginTop="16dp"
 			android:ems="10"
 			android:hint="asdfa"
 			android:inputType="number"
-			app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toEndOf="@+id/textView"
-			android:layout_marginStart="16dp"/>
+			app:layout_constraintTop_toBottomOf="@+id/restaurant_list_instructions_tv"
+			app:layout_constraintStart_toEndOf="@+id/textView"
+			android:layout_marginStart="16dp" android:layout_marginTop="16dp"/>
 
 	<Button
 			android:id="@+id/rest_list_show_btn"
@@ -25,8 +33,8 @@
 			android:layout_marginTop="16dp"
 			android:text="@string/restaurant_list_show_btn_lbl"
 			app:layout_constraintStart_toEndOf="@+id/cuisine_type_spinner"
-			app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
-			android:layout_marginEnd="8dp"/>
+			app:layout_constraintEnd_toEndOf="parent"
+			android:layout_marginEnd="8dp" app:layout_constraintTop_toBottomOf="@+id/restaurant_list_instructions_tv"/>
 
 	<ListView
 			android:id="@+id/restaurant_list_listview"
@@ -40,8 +48,10 @@
 	<TextView
 			android:text="Cuisine Type"
 			android:layout_width="87dp"
-			android:layout_height="48dp" app:layout_constraintTop_toTopOf="parent"
-			android:layout_marginTop="16dp" android:id="@+id/textView" app:layout_constraintStart_toStartOf="parent"
-			android:layout_marginStart="8dp" android:textAlignment="textEnd" android:textSize="14sp"/>
+			android:layout_height="48dp"
+			android:id="@+id/textView" app:layout_constraintStart_toStartOf="parent"
+			android:layout_marginStart="8dp" android:textAlignment="textEnd" android:textSize="14sp"
+			android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/restaurant_list_instructions_tv"
+			android:gravity="center_vertical"/>
 
 </android.support.constraint.ConstraintLayout>
