--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -1,10 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
-          xmlns:tools="http://schemas.android.com/tools"
-          xmlns:map="http://schemas.android.com/apk/res-auto"
-          android:layout_width="match_parent"
-          android:layout_height="match_parent"
-          android:id="@+id/map"
-          tools:context=".MapsActivity"
-          android:name="com.google.android.gms.maps.SupportMapFragment"
-          map:uiZoomControls="true"/>
+<android.support.constraint.ConstraintLayout
+		xmlns:android="http://schemas.android.com/apk/res/android"
+		xmlns:tools="http://schemas.android.com/tools"
+		xmlns:app="http://schemas.android.com/apk/res-auto"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		tools:context=".MapsActivity">
+	<fragment xmlns:android="http://schemas.android.com/apk/res/android"
+	          xmlns:tools="http://schemas.android.com/tools"
+	          xmlns:map="http://schemas.android.com/apk/res-auto"
+	          android:layout_width="match_parent"
+	          android:layout_height="match_parent"
+	          android:id="@+id/map"
+	          tools:context=".MapsActivity"
+	          android:name="com.google.android.gms.maps.SupportMapFragment"
+	          map:uiZoomControls="true"/>
+	<Button
+			android:text="@string/toggle_view"
+			android:layout_width="wrap_content"
+			android:layout_height="39dp"
+			android:id="@+id/button"
+			android:onClick="onMapTypeSwitch"
+			style="@android:style/Widget.Material.Light.Button.Small"
+			android:backgroundTint="@color/common_google_signin_btn_text_dark_default"
+			android:layout_marginBottom="8dp"
+			app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp"
+			app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
+			app:layout_constraintEnd_toEndOf="parent"/>
+</android.support.constraint.ConstraintLayout>
