--- a/app/src/main/res/layout/activity_cuisines_list.xml
+++ b/app/src/main/res/layout/activity_cuisines_list.xml
@@ -9,15 +9,18 @@
 
 	<TextView
 			android:text="@string/cuisine_list_instructions_txt"
-			android:layout_width="wrap_content"
+			android:layout_width="0dp"
 			android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
-			app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="24dp"
-			android:layout_marginStart="8dp" android:id="@+id/textView4" app:layout_constraintHorizontal_bias="0.5"
-			app:layout_constraintEnd_toEndOf="parent"/>
+			android:layout_marginTop="16dp"
+			android:id="@+id/textView4"
+			app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
+			app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>
 	<ListView
 			android:layout_width="368dp"
 			android:layout_height="460dp"
 			app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-			android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView4"
-			android:id="@+id/cuisine_list_listview"/>
+			android:id="@+id/cuisine_list_listview" android:layout_marginBottom="8dp"
+			app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
+			android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
+			app:layout_constraintTop_toBottomOf="@+id/textView4"/>
 </android.support.constraint.ConstraintLayout>
