--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -10,7 +10,7 @@
 	          xmlns:tools="http://schemas.android.com/tools"
 	          xmlns:map="http://schemas.android.com/apk/res-auto"
 	          android:layout_width="match_parent"
-	          android:layout_height="match_parent"
+	          android:layout_height="394dp"
 	          android:id="@+id/map"
 	          tools:context=".MapsActivity"
 	          android:name="com.google.android.gms.maps.SupportMapFragment"
@@ -23,8 +23,36 @@
 			android:onClick="onMapTypeSwitch"
 			style="@android:style/Widget.Material.Light.Button.Small"
 			android:backgroundTint="@color/common_google_signin_btn_text_dark_default"
-			android:layout_marginBottom="8dp"
-			app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp"
+			android:layout_marginEnd="8dp"
+			app:layout_constraintEnd_toEndOf="parent"
+			android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="@+id/map"
+			android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"/>
+	<TextView
+			android:text="Restaurant"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:id="@+id/restaurantNameTxt"
+			android:textAppearance="@style/TextAppearance.AppCompat.Display1" android:layout_marginTop="8dp"
+			app:layout_constraintTop_toBottomOf="@+id/map" android:layout_marginStart="8dp"
+			app:layout_constraintStart_toStartOf="parent"/>
+	<TextView
+			android:text="Location"
+			android:layout_width="0dp"
+			android:layout_height="wrap_content"
+			android:id="@+id/restaurantLocationTxt"
+			android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+			android:textColor="@color/design_default_color_primary_dark" android:clickable="true"
+			android:layout_marginTop="8dp"
+			app:layout_constraintTop_toBottomOf="@+id/restaurantNameTxt" android:layout_marginStart="8dp"
 			app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
-			app:layout_constraintEnd_toEndOf="parent"/>
+			app:layout_constraintEnd_toEndOf="parent" android:onClick="onRestaurantLinkClick"/>
+	<TextView
+			android:text="Details"
+			android:layout_width="0dp"
+			android:layout_height="0dp"
+			android:id="@+id/restaurantDescriptionTxt" app:layout_constraintEnd_toEndOf="parent"
+			android:layout_marginEnd="8dp"
+			android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+			android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/restaurantLocationTxt"/>
 </android.support.constraint.ConstraintLayout>
