--- a/app/src/main/res/layout/activity_restaurants_list.xml
+++ b/app/src/main/res/layout/activity_restaurants_list.xml
@@ -8,12 +8,13 @@
 
 	<TextView
 			android:text="@string/restaurant_list_instructions_txt"
-			android:layout_width="wrap_content"
+			android:layout_width="0dp"
 			android:layout_height="wrap_content"
 			android:id="@+id/restaurant_list_instructions_tv" app:layout_constraintTop_toTopOf="parent"
 			android:layout_marginTop="8dp"
 			app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
-			app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"/>
+			app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
+			android:layout_marginEnd="16dp"/>
 	<Spinner
 			android:id="@+id/cuisine_type_spinner"
 			android:layout_width="153dp"
@@ -47,11 +48,12 @@
 			app:layout_constraintTop_toBottomOf="@+id/cuisine_type_spinner"/>
 	<TextView
 			android:text="Cuisine Type"
-			android:layout_width="87dp"
+			android:layout_width="wrap_content"
 			android:layout_height="48dp"
 			android:id="@+id/textView" app:layout_constraintStart_toStartOf="parent"
 			android:layout_marginStart="8dp" android:textAlignment="textEnd" android:textSize="14sp"
 			android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/restaurant_list_instructions_tv"
-			android:gravity="center_vertical"/>
+			android:gravity="center_vertical" app:layout_constraintEnd_toStartOf="@+id/cuisine_type_spinner"
+			android:layout_marginEnd="8dp"/>
 
 </android.support.constraint.ConstraintLayout>
