--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -1,58 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-		xmlns:android="http://schemas.android.com/apk/res/android"
-		xmlns:tools="http://schemas.android.com/tools"
-		xmlns:app="http://schemas.android.com/apk/res-auto"
-		android:layout_width="match_parent"
-		android:layout_height="match_parent"
-		tools:context=".MapsActivity">
-	<fragment xmlns:android="http://schemas.android.com/apk/res/android"
-	          xmlns:tools="http://schemas.android.com/tools"
-	          xmlns:map="http://schemas.android.com/apk/res-auto"
-	          android:layout_width="match_parent"
-	          android:layout_height="394dp"
-	          android:id="@+id/map"
-	          tools:context=".MapsActivity"
-	          android:name="com.google.android.gms.maps.SupportMapFragment"
-	          map:uiZoomControls="true"/>
-	<Button
-			android:text="@string/toggle_view"
-			android:layout_width="wrap_content"
-			android:layout_height="39dp"
-			android:id="@+id/button"
-			android:onClick="onMapTypeSwitch"
-			style="@android:style/Widget.Material.Light.Button.Small"
-			android:backgroundTint="@color/common_google_signin_btn_text_dark_default"
-			android:layout_marginEnd="8dp"
-			app:layout_constraintEnd_toEndOf="parent"
-			android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="@+id/map"
-			android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"/>
-	<TextView
-			android:text="Restaurant"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:id="@+id/restaurantNameTxt"
-			android:textAppearance="@style/TextAppearance.AppCompat.Display1" android:layout_marginTop="8dp"
-			app:layout_constraintTop_toBottomOf="@+id/map" android:layout_marginStart="8dp"
-			app:layout_constraintStart_toStartOf="parent"/>
-	<TextView
-			android:text="Location"
-			android:layout_width="0dp"
-			android:layout_height="wrap_content"
-			android:id="@+id/restaurantLocationTxt"
-			android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-			android:textColor="@color/design_default_color_primary_dark" android:clickable="true"
-			android:layout_marginTop="8dp"
-			app:layout_constraintTop_toBottomOf="@+id/restaurantNameTxt" android:layout_marginStart="8dp"
-			app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
-			app:layout_constraintEnd_toEndOf="parent" android:onClick="onRestaurantLinkClick"/>
-	<TextView
-			android:text="Details"
-			android:layout_width="0dp"
-			android:layout_height="0dp"
-			android:id="@+id/restaurantDescriptionTxt" app:layout_constraintEnd_toEndOf="parent"
-			android:layout_marginEnd="8dp"
-			android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
-			app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-			android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/restaurantLocationTxt"/>
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".MapsActivity">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <fragment
+            android:id="@+id/map"
+            android:name="com.google.android.gms.maps.SupportMapFragment"
+            android:layout_width="match_parent"
+            android:layout_height="394dp"
+            app:uiZoomControls="true" />
+
+        <Button
+            android:id="@+id/button"
+            style="@android:style/Widget.Material.Light.Button.Small"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:backgroundTint="@color/common_google_signin_btn_text_dark_default"
+            android:onClick="onMapTypeSwitch"
+            android:text="@string/toggle_view" />
+
+        <TextView
+            android:id="@+id/restaurantNameTxt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Restaurant"
+            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
+
+        <TextView
+            android:id="@+id/restaurantLocationTxt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            android:onClick="onRestaurantLinkClick"
+            android:text="Location"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+            android:textColor="@color/design_default_color_primary_dark" />
+
+        <TextView
+            android:id="@+id/restaurantDescriptionTxt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Details" />
+    </LinearLayout>
+
 </android.support.constraint.ConstraintLayout>
